--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,27 @@ Authors ....... Dennis Gaebel (@gryghostvisuals) & Zachary Kain (@zakkain)
 License ....... Creative Commmons Attribution 3.0
 License URL ... https://github.com/typeplate/starter-kit/blob/master/license.txt
 */
-@font-face {
-  font-family: "Ampersand";
-  src: local("Georgia"), local("Garamond"), local("Palatino"), local("Book Antiqua");
+
+/*@font-face {
+  font-family: 'Kumar One', cursive;
   unicode-range: U+0026;
 }
 
 @font-face {
-  font-family: "Ampersand";
-  src: local("Georgia");
+  font-family: 'Raleway', sans-serif;
   unicode-range: U+270C;
-}
+}*/
 
 .typl8-tera, .typl8-giga, .typl8-mega, h1, .typl8-alpha, h2, .typl8-beta, h3, .typl8-gamma, h4, .typl8-delta, h5, .typl8-epsilon, .typl8-zeta, h6 {
   text-rendering: optimizeLegibility;
   line-height: 1;
   margin-top: 0;
   color: #222;
+}
+
+#indent {
+
+  margin-left: 25px;
 }
 
 blockquote + figcaption cite {
@@ -35,6 +39,18 @@ blockquote + figcaption cite {
 
 body {
   word-wrap: break-word;
+  font-family: 'Raleway', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+
+  font-family: 'Kumar One', cursive;
+}
+
+ul {
+
+  list-style: none;
+
 }
 
 pre code {
